@@ -46,9 +46,12 @@
 #undef HAVE_BROKEN_WCTYPE
 #undef HAVE_DOPRNT
 #undef HAVE_FLOAT_H
+#undef HAVE_GETPWUID_R
+#undef HAVE_GETPWUID_R_POSIX
 #undef HAVE_LIMITS_H
 #undef HAVE_LONG_DOUBLE
 #undef HAVE_POLL
+#undef HAVE_PTHREAD_GETSPECIFIC_POSIX
 #undef HAVE_PWD_H
 #undef HAVE_SYS_PARAM_H
 #undef HAVE_SYS_POLL_H
@@ -92,7 +95,6 @@
 
 #undef G_THREAD_SOURCE
 
-#undef HAVE_GETPWUID_R_POSIX
 /* #undef PACKAGE */
 /* #undef VERSION */
 
